2008-03-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/tasque-icons-source.svg: Added jimmac's source SVG for
	  the Tasque icons.

2008-03-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/tasque.svg, data/images/Makefile.am: Added real SVG of
	  Tasque icon for scalable goodness.

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs: Updated to not include the All category in prefs
	  dialog

2008-03-12  Boyd Timothy <btimothy@gmail.com> 

	* src/PreferencesDialog.cs, src/NoteDialog.cs, src/Application.cs,
	  src/TaskWindow.cs: Adjust icons that are used in the window titlebar to
	  be 16x16 so they appear better.  Also adjust the tasque icon and execute
	  icon in the tray icon to be 16x16 to match the rest of the menu.

2008-03-12  Boyd Timothy <btimothy@gmail.com> 

	* Initial check in of Tasque to GNOME SVN.

2008-03-11  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/tasque-22.png, data/images/tasque-32.png,
	  data/images/tasque-24.png, data/images/tasque-16.png,
	  data/images/tasque-48.png, MAINTAINERS: Updated graphics and new valid
	  MAINTAINERS file

2008-03-09  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Only use notify-sharp when enabled in configure.

2008-03-08  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Add support for keybindings to the TaskWindow, starting
	  with Ctrl+n for creating a new task.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bumping to 0.1.5.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* NEWS: Updated for the 0.1.4 release.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* src/TaskWindow.cs: Show "Notes..." in a tasks right-click menu.  Fix the
	  size of the delete and edit items in the menu.  Implement Edit.

2008-03-06  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Rolling back most recent changes.  Looking
	at a better way of doing this.
